--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    </div>
   </div>
  </section>
- <!-<section class="portafolio">
+ <!--<section class="portafolio">
    <div class="contenedor">
      <h2 class="titulo">portafolio</h2>
      <div class="galeria-port"> -->
