--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
 <footer>
 <div class="contenedor-footer">
   <div class="contenedor-foo">
-    <h4>phone</h4>
-    <p>+503 6043 9806</p>
+    <h4>telefono</h4>
+    <p>+sin definir</p>
   </div>
   <div class="contenedor-foo">
     <h4>gmail</h4>
-    <p>josemanuelquinteros18@gmail.com</p>
+    <p>sin definir</p>
   </div>
   <div class="contenedor-foo">
-    <h4>location</h4>
+    <h4>pais</h4>
     <p>El salvador</p>
   </div>
 </div>
