--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <div class="contenedor-footer">
   <div class="contenedor-foo">
     <h4>telefono</h4>
-    <p>+sin definir</p>
+    <p>sin definir</p>
   </div>
   <div class="contenedor-foo">
     <h4>gmail</h4>
